<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_shuffle">Shuffle Songs</string>
    <string name="app_name">Gramophone</string>
    <string name="no_songs_found">No songs found</string>
    <string name="no_artists_found">No artists found</string>
    <string name="no_albums_found">No albums found</string>
    <string name="no_genres_found">No genres found</string>
    <string name="album">Album: %s</string>
    <string name="has_artwork">Has artwork: %s</string>
    <string name="album_artist">Album Artist: %s</string>
    <string name="artist">Artist: %s</string>
    <string name="bitrate">Bitrate: %s</string>
    <string name="album_track_number">Album Track Number: %s</string>
    <string name="album_track_count">Album Track Count: %s</string>
    <string name="compilation">Compilation: %s</string>
    <string name="composer">Composer: %s</string>
    <string name="date_modified">Date Modified: %s</string>
    <string name="disc_number">Disc #: %s</string>
    <string name="disc_count">Number of discs: %s</string>
    <string name="duration">Duration: %s</string>
    <string name="genre">Genre: %s</string>
    <string name="filePath">Location: %s</string>
    <string name="num_tracks">Number of tracks: %s</string>
    <string name="title">Title: %s</string>
    <string name="year">Year: %s</string>
    <string name="writer">Writer: %s</string>
    <string name="filename">Filename: %s</string>
    <string name="size">Size: %s</string>
    <string name="samplerate">Sample Rate: %s</string>
    <string name="play_count">Play Count: %s</string>
    <string name="rating">Rating: %s/5</string>
    <string name="skip_count">Skip Count: %s</string>

    <string name="title_activity_song_metadata">Song Metadata</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="album_cover">Album Cover</string>
    <string name="search_hint">Search Songs, Artists, or Albums</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Enqueue</string>
    <string name="more">More</string>
    <string name="go_to_artist">Artist</string>
    <string name="go_to_album">Album</string>

    <string name="edit_title">Edit Title</string>
    <string name="confirm_metadata_edit">OK</string>
    <string name="cancel_metadata_edit">Cancel</string>
    <string name="edit_metadata">Edit</string>
    <string name="time_zero">0:00</string>
    <string name="view_songs">View Songs</string>
    <string name="alert_dialog_delete_songs_title">Delete Song?</string>
    <string name="cancel_delete_song">Cancel</string>
    <string name="alert_dialog_confirm_delete_song">Delete</string>
    <string name="song_delete_failed">Delete Failed</string>
    <string name="make_sure_delete_song">Are you sure you want to delete %s ?</string>
    <string name="init_library">Initializing Library...</string>
    <string name="queue_empty">Queue is empty</string>
    <string name="about_app">ABOUT</string>
    <string name="build_version">Build version</string>
    <string name="build_number">0.0.1</string>
    <string name="version_of_app">Version: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_category_audio_playback">AUDIO PLAYBACK</string>
    <string name="setting_title_pause_music_when_headphones_are_unplugged">Pause music when unplugged</string>
    <string name="pref_screen_headphones">Headphones</string>
    <string name="preference_summary_playback_pause_on_unplug">Playback will be paused when headphones unplug</string>
    <string name="preference_summary_playback_dont_pause_on_unplug">Playback will not be paused when headphones unplug</string>
    <string name="pref_library_stats">Library Stats</string>
    <string name="pref_screen_equalizer">Equalizer</string>
    <string name="pref_category_general">GENERAL</string>
    <string name="pref_default_start_screen">Default start screen</string>
    <string name="choose_default_start_screen">Choose default start screen</string>
    <string name="get_audio_focus_failed">Gramophone failed to get audio focus. Perhaps another app is playing music.</string>
    <string name="action_not_supported">Action not supported</string>
    <string name="up_next">Up Next: %s</string>
    <string name="nothing_up_next">No songs in queue</string>
    <string name="added_to_queue">%s was added to the queue</string>
    <string name="pref_provide_feedback">Provide Feedback</string>
</resources>
