<?xml version="1.0" encoding="utf-8"?><PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">    <PreferenceCategory android:title="@string/pref_category_general">        <ListPreference                android:key="pref_key_default_view"                android:title="@string/pref_default_start_screen"                android:entries="@array/default_start_screens"                android:entryValues="@array/default_start_screen_codes"                android:defaultValue="Songs"                android:dialogTitle="@string/choose_default_start_screen"                android:persistent="true"/>    </PreferenceCategory>    <PreferenceCategory android:title="@string/preference_category_audio_playback">        <PreferenceScreen                android:key="button_equalizer"                android:title="@string/pref_screen_equalizer"                android:persistent="false">            <!--TODO: set intent to bring user to EQ UI-->        </PreferenceScreen>        <PreferenceScreen                android:key="button_headphones"                android:title="@string/pref_screen_headphones"                android:persistent="false">            <CheckBoxPreference                    android:key="pref_key_pause_music_when_unplugging_headphones"                    android:title="@string/setting_title_pause_music_when_headphones_are_unplugged"                    android:summary="@string/preference_summary_playback_pause_on_unplug"                    android:defaultValue="true"                    android:persistent="true"/>        </PreferenceScreen>    </PreferenceCategory>    <PreferenceCategory android:title="@string/about_app">        <Preference                android:key="pref_key_library_stats"                android:title="@string/pref_library_stats"                android:persistent="false"/>        <Preference                android:key="pref_key_build_version"                android:title="@string/build_version"                android:persistent="false"/>    </PreferenceCategory></PreferenceScreen>