<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <LinearLayout
            android:id="@+id/swipelist_backview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_background"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1">

            <ImageButton
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:id="@+id/playNext_imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_play"
                    android:contentDescription="@string/play_next"
                    android:background="@color/clear"/>

            <TextView
                    android:id="@+id/playNext_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_next"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:paddingBottom="20dp"
                    android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1">

            <ImageButton
                    android:id="@+id/addToQueue_imageButton"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_add"
                    android:contentDescription="@string/add_to_queue"
                    android:background="@color/clear"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_queue"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:id="@+id/textView"
                    android:paddingBottom="20dp"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1">

            <ImageButton
                    android:id="@+id/goToArtist_imageButon"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_btn_speak_now"
                    android:contentDescription="@string/go_to_artist"
                    android:background="@color/clear"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_artist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingBottom="20dp"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/goToAlbum_imageButton"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_input_get"
                    android:contentDescription="@string/go_to_album"
                    android:background="@color/clear"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_album"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:paddingBottom="20dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_weight="1">

            <ImageButton
                    android:id="@+id/viewMore_imageButton"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_core_overflow"
                    android:contentDescription="@string/more"
                    android:background="@color/clear"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:paddingBottom="20dp"/>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/swipelist_frontview"
            android:background="@color/default_background">

        <ImageView
                android:id="@+id/songListItemAlbumArt_imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                android:src="@drawable/ic_launcher"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"/>

        <TextView
                android:id="@+id/songTitle_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toLeftOf="@id/songListItemAlbumArt_imageView"
                android:layout_alignParentLeft="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="Song Title"/>

        <TextView
                android:id="@+id/songArtist_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="Song Artist"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@id/songTitle_TextView"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/songListItemAlbumArt_imageView"/>

        <TextView
                android:id="@+id/songAlbum_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="Song Album"
                android:layout_alignStart="@+id/songArtist_TextView"
                android:layout_below="@id/songArtist_TextView"
                android:layout_toLeftOf="@+id/songListItemAlbumArt_imageView"
                android:paddingBottom="8dp"/>

    </RelativeLayout>
</FrameLayout>